# cpp-project-template

./: .dir-locals.el  .editorconfig  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CODE_OWNERS.TXT  README.md  conanfile.txt  requirements.txt
.ci/: analyze-build.sh  export-spec-variables.sh  install-compiler-linux.sh  install-compiler-ubuntu.sh  objanalyze.sh  prune-ppas.sh
.github/workflows/: analysis.yml  build.yml
cmake/: Bootstrap.cmake  BuildType.cmake  CMakeFormat.cmake  ClangFormat.cmake  CompilerFlags.cmake  CompilerWarnings.cmake  ConanHelper.cmake  Cppcheck.cmake  Helpers.cmake  ProjectInfo.cmake  Version.hpp.in
cmake-sqlite-conan/: .clang-format  .cmake-format  .dir-locals.el  .gitattributes  .gitignore  CMakeLists.txt  CPPLINT.cfg  README.md  requirements.txt
cmake-sqlite-conan/cmake/: Bootstrap.cmake  CMakeFormat.cmake  ClangFormat.cmake
cmake-sqlite-conan/include/stars/: ChuckNorris.hpp
cmake-sqlite-conan/src/: CMakeLists.txt  main.cpp
cmake-sqlite-conan/src/ChuckNorris/: CMakeLists.txt  ChuckNorris.cpp
data/: .gitignore  CMakeLists.txt  stars.sqlite
docs/: GettingStarted.md
include/: .gitignore
include/stars/: ChuckNorris.hpp  Version.hpp.in
src/: CMakeLists.txt  main.cpp
src/ChuckNorris/: CMakeLists.txt  ChuckNorris.cpp  ChuckNorrisImpl.cpp  ChuckNorrisImpl.hpp  Database.hpp.in
stars/: .clang-format  CMakeLists.txt  CPPLINT.cfg  README.md  conanfile.txt  requirements.txt  spec.env
stars/cmake/: Bootstrap.cmake  ClangFormat.cmake  CompilerOptions.cmake  CompilerWarnings.cmake  ConanHelper.cmake  Cppcheck.cmake  LanguageStandard.cmake  ProjectInfo.cmake  Version.hpp.in
stars/data/: CMakeLists.txt  stars.sqlite
stars/include/stars/: ChuckNorris.hpp
stars/src/: .gitignore  CMakeLists.txt  main.cpp
stars/src/ChuckNorris/: CMakeLists.txt  ChuckNorris.cpp  Database.hpp.in
stars/tools/conan/: remotes.json
stars/tools/conan/profiles/: Linux-x86_64-clang-5.0-Debug-ninja  Linux-x86_64-gcc-7-debug-ninja
tests/: .gitignore  CMakeLists.txt  Properties.hpp.in  main.cpp
tests/ChuckNorris/: CMakeLists.txt  ChuckNorrisBaseTest.cpp  ChuckNorrisBaseTest.hpp
tools/conan/profiles/: Linux-x64-clang-5.0-Release  Linux-x64-gcc-7-Release  Linux-x86_64-clang-5.0-Debug  Linux-x86_64-gcc-7-Asan  Linux-x86_64-gcc-7-Debug  Linux-x86_64-gcc-7-Ubsan  Windows-x64-msvc-16-Debug  Windows-x64-msvc-16-Release  macOS-x64-apple-clang-11.0-Debug  macOS-x64-apple-clang-11.0-Release  macOS-x86_64-apple-clang-11.0-Debug
